--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 info.app.name=@project.artifactId@
 
 # Database
-spring.jpa.database=POSTGRESQL
+spring.jpa.database=H2
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${sicpa.db.url:jdbc:postgresql://localhost:5432/scoreboard}
-spring.datasource.username=${sicpa.db.user:scoreboard}
-spring.datasource.password=${sicpa.db.password:scoreboard}
-spring.flyway.placeholders.user=${sicpa.db.user:scoreboard}
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=scoreboard
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 scoreboard.system-username=scoreboarduser
