--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,7 @@
 info.app.name=@project.artifactId@
 
+server.port=8080
+
 # Database
 spring.jpa.database=H2
 spring.jpa.hibernate.ddl-auto=update
@@ -9,6 +11,8 @@ spring.datasource.username=scoreboard
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 scoreboard.system-username=scoreboarduser
 scoreboard.system-password=scoreboardpass
